--- a/src/ui/popups/Popout/Popout.scss
+++ b/src/ui/popups/Popout/Popout.scss
@@ -32,7 +32,8 @@
   border: solid 0 transparent;
   border-radius: 0;
 
-  .content {
+  & > .static,
+  & > .content {
     left: 0;
     top: 0;
   }
@@ -71,11 +72,27 @@
   border-radius: var(--ui-popout-radius);
   opacity: 0;
 
-  .content {
+  & > .static,
+  & > .content {
     top: calc(var(--ui-popout-top) * -1);
     left: calc(var(--ui-popout-left) * -1);
     opacity: 0;
     transition: all .3s;
+  }
+}
+
+.static {
+  position: absolute;
+  pointer-events: none;
+  z-index: 1;
+  transition: all .3s;
+  width: 100vw;
+  height: var(--window-height);
+  top: calc(var(--ui-popout-top) * -1);
+  left: calc(var(--ui-popout-left) * -1);
+
+  & > * {
+    pointer-events: all;
   }
 }
 
