--- a/src/ui/popups/Popout/Popout.scss
+++ b/src/ui/popups/Popout/Popout.scss
@@ -60,6 +60,12 @@
     top: calc(var(--ui-popout-touch) * var(--ui-popout-top) * -1);
     left: calc(var(--ui-popout-touch) * var(--ui-popout-left) * -1);
   }
+
+  & > .static {
+    transition: none;
+    top: calc(var(--ui-popout-touch) * var(--ui-popout-top) * -1);
+    left: calc(var(--ui-popout-touch) * var(--ui-popout-left) * -1);
+  }
 }
 
 .hide {
