--- a/src/ui/interaction/ToggleBar/ToggleBar.scss
+++ b/src/ui/interaction/ToggleBar/ToggleBar.scss
@@ -30,7 +30,7 @@
   gap: 4px;
 
   &:hover {
-    color: var(--color-10);
+    color: var(--color-primary-50);
   }
   &:focus {
     outline: none;
