--- a/src/ui/buttons/Button/Button.scss
+++ b/src/ui/buttons/Button/Button.scss
@@ -86,6 +86,19 @@
   }
 }
 
+.ghost {
+  background-color: transparent;
+  border-color: var(--color-100);
+
+  &:hover {
+    background-color: #fff1;
+  }
+
+  &:active {
+    background-color: #0001;
+  }
+}
+
 .root:focus {
   outline: none;
 
