--- a/src/ui/buttons/BurgerButton/BurgerButton.scss
+++ b/src/ui/buttons/BurgerButton/BurgerButton.scss
@@ -3,6 +3,7 @@
 
   border: 1px solid var(--color-90);
   cursor: pointer;
+  color: var(--color-10);
   background: var(--color-100);
   font-size: var(--ui-burger-button-size);
   border-radius: 50%;
