--- a/src/ui/cards/Card/Card.scss
+++ b/src/ui/cards/Card/Card.scss
@@ -60,9 +60,11 @@
   transition: all .3s;
   user-select: none;
 
-  &:hover {
-    transform: translateZ(10px);
-    box-shadow: 0 0 30px -10px rgba(109, 109, 109, 0.15);
+  @media (pointer: fine) {
+    &:hover {
+      transform: translateZ(10px);
+      box-shadow: 0 0 30px -10px rgba(109, 109, 109, 0.15);
+    }
   }
 
   &:active {
