--- a/src/ui/interaction/Checkbox/Checkbox.scss
+++ b/src/ui/interaction/Checkbox/Checkbox.scss
@@ -24,8 +24,10 @@
   transition: all .3s;
   pointer-events: none;
 
-  .root:hover & {
-    border-color: var(--color-primary-100);
+  @media (pointer: fine) {
+    .root:hover & {
+      border-color: var(--color-primary-100);
+    }
   }
 
   .input:focus + & {
@@ -39,9 +41,11 @@
     border-color: var(--color-primary-50);
   }
 
-  .checked:hover & {
-    background: var(--color-primary-30);
-    border-color: var(--color-primary-30);
+  @media (pointer: fine) {
+    .checked:hover & {
+      background: var(--color-primary-30);
+      border-color: var(--color-primary-30);
+    }
   }
 
   .disabled & {
