--- a/src/ui/interaction/Set/Set.scss
+++ b/src/ui/interaction/Set/Set.scss
@@ -20,8 +20,10 @@
   cursor: pointer;
   user-select: none;
 
-  &:hover {
-    color: var(--color-negative-50);
+  @media (pointer: fine) {
+    &:hover {
+      color: var(--color-negative-50);
+    }
   }
 }
 
