--- a/src/ui/interaction/Stories/Stories.scss
+++ b/src/ui/interaction/Stories/Stories.scss
@@ -12,9 +12,14 @@
   border: 2px solid var(--color-80);
   transition: border .3s;
 
-  &.unread,
-  &:hover {
+  &.unread {
     border-color: var(--color-primary-50);
+  }
+
+  @media (pointer: fine) {
+    &:hover {
+      border-color: var(--color-primary-50);
+    }
   }
 }
 
