--- a/src/ui/interaction/Tag/Tag.scss
+++ b/src/ui/interaction/Tag/Tag.scss
@@ -36,9 +36,11 @@
   transition: all .3s;
   pointer-events: none;
 
-  .root:hover > & {
-    border-color: var(--color-primary-100);
-    background: var(--color-primary-100);
+  @media (pointer: fine) {
+    .root:hover > & {
+      border-color: var(--color-primary-100);
+      background: var(--color-primary-100);
+    }
   }
 
   .input:focus + & {
@@ -52,9 +54,11 @@
     border-color: var(--color-primary-50);
   }
 
-  .checked:hover > & {
-    background: var(--color-primary-70);
-    border-color: var(--color-primary-70);
+  @media (pointer: fine) {
+    .checked:hover > & {
+      background: var(--color-primary-70);
+      border-color: var(--color-primary-70);
+    }
   }
 
   .disabled > & {
