--- a/src/ui/interaction/Toggle/Toggle.scss
+++ b/src/ui/interaction/Toggle/Toggle.scss
@@ -24,9 +24,11 @@
   transition: all .3s;
   pointer-events: none;
 
-  .root:hover & {
-    border-color: var(--color-70);
-    background: var(--color-70);
+  @media (pointer: fine) {
+    .root:hover & {
+      border-color: var(--color-70);
+      background: var(--color-70);
+    }
   }
 
   .input:focus + & {
@@ -40,9 +42,11 @@
     border-color: var(--color-primary-50);
   }
 
-  .checked:hover & {
-    background: var(--color-primary-40);
-    border-color: var(--color-primary-40);
+  @media (pointer: fine) {
+    .checked:hover & {
+      background: var(--color-primary-40);
+      border-color: var(--color-primary-40);
+    }
   }
 
   .disabled & {
