--- a/src/ui/layout/Details/Details.scss
+++ b/src/ui/layout/Details/Details.scss
@@ -16,14 +16,17 @@
     display:none;
   }
 
-  &:hover {
-    outline: none;
-    color: var(--color-secondary-50);
+  @media (pointer: fine) {
+    &:hover {
+      outline: none;
+      color: var(--color-secondary-50);
 
-    .arrow {
-      --ui-arrow-color: var(--color-secondary-50);
+      .arrow {
+        --ui-arrow-color: var(--color-secondary-50);
+      }
     }
   }
+
   &:focus {
     outline: none;
 
