--- a/src/ui/popups/DatePicker/DatePicker.scss
+++ b/src/ui/popups/DatePicker/DatePicker.scss
@@ -19,13 +19,17 @@
   color: var(--color-secondary-50);
   cursor: pointer;
 
-  &:hover {
-    color: var(--color-secondary-70);
+  @media (pointer: fine) {
+    &:hover {
+      color: var(--color-secondary-70);
+    }
   }
+
   &:focus {
     color: var(--color-warning-50);
     outline: none;
   }
+
   &:active {
     color: var(--color-secondary-40);
   }
@@ -44,8 +48,10 @@
   text-transform: capitalize;
   min-height: 60px;
 
-  &:hover {
-    background-color: var(--color-surface-purple);
+  @media (pointer: fine) {
+    &:hover {
+      background-color: var(--color-surface-purple);
+    }
   }
 }
 
@@ -53,8 +59,10 @@
   background-color: var(--color-primary-50);
   color: var(--color-100);
 
-  &:hover {
-    background-color: var(--color-primary-40);
+  @media (pointer: fine) {
+    &:hover {
+      background-color: var(--color-primary-40);
+    }
   }
 }
 
