--- a/src/ui/typography/Divider/Divider.scss
+++ b/src/ui/typography/Divider/Divider.scss
@@ -7,7 +7,7 @@
 
   &:not(.vertical) {
     margin: 18px 0;
-    border-top: solid 1px #0003;
+    border-top: solid 1px #00000014;
   }
 }
 
@@ -18,5 +18,5 @@
 
 .vertical {
   margin: 0 18px;
-  border-left: solid 1px #0000001a;
+  border-left: solid 1px #00000014;
 }
