--- a/src/ui/popups/Modal/Modal.scss
+++ b/src/ui/popups/Modal/Modal.scss
@@ -121,7 +121,7 @@
 
     &:hover {
       background: none;
-      color: var(--color-link-dark);
+      color: var(--color-secondary-50);
     }
   }
 
